# minicar_ackermann_hardware

./: .gitignore  CMakeLists.txt  README.md  minicar_ackermann_interface_plugin.xml  package.xml
config/: ackermann_controller.yaml  minicar_ackermann_real.xacro
include/robot_hardware/: ackermann_hardware_interface.hpp  pca9685_servo_controller.hpp
launch/: motor_only.launch.py  real_robot_bringup.launch.py
scripts/: motor_test.py  servo_test.py
src/: ackermann_hardware_interface.cpp  pca9685_servo_controller.cpp
